scss/ionic.app.scss
/*
To customize the look and feel of Ionic, you can override the variables
in ionic's _variables.scss file.

For example, you might change some of the default colors:

$light:                           #fff !default;
$stable:                          #f8f8f8 !default;
$positive:                        #387ef5 !default;
$calm:                            #11c1f3 !default;
$balanced:                        #33cd5f !default;
$energized:                       #ffc900 !default;
$assertive:                       #ef473a !default;
$royal:                           #886aea !default;
$dark:                            #444 !default;
*/
$android-transition-duration:             0ms !default;
// The path for our ionicons font files, relative to the built CSS in www/css
$ionicons-font-path: "../lib/ionic/fonts" !default;

// Include all of Ionic
@import "www/lib/ionic/scss/ionic";



// The path for our ionicons font files, relative to the built CSS in www/css
$ionicons-font-path: "../lib/ionic/fonts" !default;



// Include all of Ionic
@import "www/lib/ionic/scss/ionic";

/* Seema: Following css elements are moved from stlye.css */


html{
  background: #eee;
  margin: 0;
  padding: 0;
  font-family: 'Lato', sans-serif;
  font-size: 14px;
  min-height: 100%;

  .padding{
      padding:0px!important; /* important is needed here else it will get overridden*/
  }

  body{
    font: 12px/20px'Trebuchet MS', Helvetica, sans-serif!important;
    color: #404040;
    background-image: radial-gradient(circle, #555555, #333333 80%);
  }

 }

 span .circle-span.direct-chat-timestamp
 {
     padding: 6px 4px 4px 4px;
     background-color: #fff;
     opacity:1
 }

 .circle-span
 {
      padding: 12px 5px 0px 5px;
      font-weight: bold;
      font-size: 20px;
      opacity:1;
      z-index: 100;
 			width: 40px;
 			height: 40px;
 			display: none;
 			position: absolute;
 			border-radius: 50%;
 			text-align: center;
 			line-height: 16px;
 			vertical-align: middle;
 			color: #ffffff;
 			display: block;
 			word-wrap: break-word;
 			left:5px;
  }


.tabs
{
  background-color: #fff;
  border-color: #fff !important;
}

.tab-title
{
     color:#000 !important;
}
.bar.bar-header .button + .title {
    text-align: left;
    left: 48px;!important;
    line-height: 46px;
    position: fixed;
    float: none !important;
}
div .title.title-left.header-item
{
  text-align: left;
    left: 48px; !important;
  line-height: 46px;
  position: fixed;
  float: none !important;
}

.tabs-striped
{
  &.tabs-background-positive
  {
      background-color: #fff;
  }
  &.tabs-color-light
  {
    .tab-item
    {
      &.tab-item-active,
      &.tab-item.active,
      &.tab-item.activated
      {
        border: 0 solid #fff;
      }
    }

  }
}

.tabs-top.tabs-striped
{
  .tab-item
  {
    &.tab-item-active,
    &.active,
    &.activated
    {
      border-width: 0px 0px 4px 0px !important;
      color:#D14836!important;
    }
  }
}

.item
{
  h2
  {
      margin: 10px 10px 2px 0;
      font-size: 15px;
      font-weight: normal;
  }

  h3
  {
     margin: 12px 0 4px 0;
     font-size: 16px;
     padding-right: 5px;
  }

  &.item-avatar.item-remove-animate
  {
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 0px;
    padding-top: 0px;
  }


}

.item-avatar
{
  & > span:first-child
  {
    position: absolute;
    top: 16px;
    left: 16px;
    max-width: 40px;
    max-height: 40px;
    width: 100%;
    height: 100%;
    border-radius: 50%;
  }

  & > a span:first-child
  {
    position: absolute;
    top: 16px;
    left: 16px;
    max-width: 40px;
    max-height: 40px;
    width: 100%;
    height: 100%;
    border-radius: 50%;
  }
}

a
{
  color: #fff;
  text-decoration: none;
  cursor: pointer;
}

div
{
  .list.card
  {
      padding-left:19px;
      padding-top:10px;
  }
}


.list
{
  &.card
  {
    padding-top:25px;
  }

  .item h2
  {
    font-size: 18px;
  }

  .item h4
  {
      font-size: 17px;
      color:#33aaee;
  }

  .item-text-wrap p
  {
      font-size: 17px;
      padding-left:17px
  }

}

.bar
{
  .title
  {
      top:3px!important;
  }

  &.bar-positive
  {
    border-color: #d14836 !important;
    background-color: #d14836 !important;
    background-image: linear-gradient(0deg, #d14836, #d14836 50%, transparent 50%) !important;
    color: #fff !important;
    height:50px;
  }
}

.icon-btn-customize
{
    margin-right: 15px;
    font-size: 23px !important;
}

.ion-android-arrow-back
{
    font-size: 170% !important;
    margin:10px 10px 0px 0px;
}

.landingOuter > div
{
    height:100%;
}

/*CSS for carousel images to make image resposive*/
.img-responsive
{
  display: inline-block;
  height:94%;
  width: 94%;
  opacity:1
}
.image-responsive
{
  display: block;
    width: 100%;
    height: 100%;
}

.slider-pager
{
  position: absolute;
  top: 10px;
  z-index: 1;
  width: 100%;
  height: 15px;
  text-align: center;
}

.logBtnStyle
{
	position: absolute;
  width: 102%;
	bottom:0px;
}

/*landing css*/
.container-responsive.logBtnStyle a
{
 display:block;
}

.button
{
  &.button-block
  {
    margin-bottom: 0px !important;
    background-color:#d14836 !important;
    border-color: #d14836;



    &.button-positive
    {
          margin-bottom: 0px !important;
          background-color:#d14836 !important;
          border-color: #d14836;
    }
  }
}

.pull-right
{
  float: right;
}

.item .item-content .icon.ion-transgender
{
   font-size:24px !important;
}

.ion-man
{
  &:after
  {
	   font-size: 35px;
  }
  &:before
  {
	   font-size: 35px;
  }
}

.ion-woman
{
    &:before
    {
	     font-size: 35px;
    }
    &:after
    {
    	font-size: 35px;
    }
}

.item-checkbox-left
{
   right:28px;
}


.customBtnStyle
{
  border: none!important;
  color:#fff!important;
	width:49%;
	float:left!important;
	clear:none;
  background: #106194 !important;
}
/* ... */

